# par-lang

./: 404.html  Cargo.toml  basic_program_structure.html  big_table.html  getting_started.html  highlight.js  index.html  introduction.html  print.html  process_syntax.html  searchindex.js  searchindex.json  toc.html  toc.js  types_and_expressions.html
crates/par-builtin/: Cargo.toml
crates/par-builtin/src/: builtin.rs
crates/par-builtin/src/builtin/: mailbox.rs  sql.rs  time.rs
crates/par-core/src/frontend_impl/types/: assignability.rs  checking.rs  lattice.rs  tests.rs
crates/par-runtime/src/: executor.rs  lib.rs  pkgid.rs  registry.rs
crates/par-runtime/src/flat/: readback.rs  reducer.rs  runtime.rs
docs/src/quality_of_life/: error_handling.md
examples/src/ActorModel/: Actor.par  CounterExample.par  Supervisor.par  SupervisorExample.par
nondeterminism/: both_ways.html  fan_pattern.html  index.html  poll_submit.html  repoll.html
processes/: chan_expression.html  commands.html  do_expression.html  duality.html
processes/commands/: looping_and_branching.html  receiving_where_it_shines.html  selecting_and_sending.html
quality_of_life/: error_handling.html  if.html  index.html  pipes.html
src/: main.rs
src/language_server/: instance.rs  server.rs
structure/: definitions_and_declarations.html  let_expressions.html  packages_and_modules.html  primitive_types.html
tests/src/: BeginInference.par  SqlTest.par  TimeTest.par
types/: box.html  choice.html  constraints.html  continuation.html  either.html  exists.html  forall.html  function.html  implicit_generics.html  iterative.html  pair.html  recursive.html  unit.html
