[workspace]
members = ["crates/par-core", "crates/par-builtin", "crates/par-doc"]

[package]
name = "par-lang"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/par-team/par-lang"

[[bin]]
name = "par"
path = "src/main.rs"

[features]
default = ["playground"]
playground = ["eframe", "egui_code_editor", "rfd", "par-core/playground", "par-runtime/playground"]

[dependencies]
par-core = { path = "crates/par-core" }
par-builtin = { path = "crates/par-builtin" }
par-runtime = { path = "crates/par-runtime" }
par-doc = { path = "crates/par-doc" }
futures = { version = "0.3.31", features = ["executor", "thread-pool"] }
eframe = { version = "0.34.1", features = ["default", "__screenshot"], optional = true }
egui_code_editor = { version = "=0.2.24", optional = true }
indexmap = "2.7.0"
rfd = { version = "0.15.2", optional = true }
winnow = { version = "0.7.4", features = [
    #"unstable-doc", # build docs locally
    #"debug" # debug output/state of parser
] }
miette = { version = "7.6.0", features = ["fancy"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
lsp-server = "0.7.8"
lsp-types = "0.97.0"
serde_json = "1.0.140"
serde = { version = "1.0.218", features = ["derive"] }
clap = { version = "4.5.34", features = ["cargo"] }
colored = "3.0.0"
arcstr = "1.2.0"
num-bigint = "0.4.6"
unescaper = "0.1.6"
tokio-util = "0.7.15"
scopeguard = "1.2.0"
wild = "2.2.1"
reqwest = { version = "0.12.8", features = ["stream", "gzip", "brotli", "deflate"] }
bytes = "1.6.1"
im = "15"
url = "2.5.4"
hyper = { version = "1.7.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.6", features = ["tokio"] }
http-body-util = "0.1.2"
http-body = "1.0.1"
num-traits = "0.2.19"
percent-encoding = "2.3.1"
bincode = { version = "1.3.3" }
webbrowser = "1.0.6"

[package.metadata.spellcheck]
config = ".config/spellcheck.toml"

[profile.release]
lto = "thin"
codegen-units = 1

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = "0.1.49"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "fs", "io-util", "io-std", "signal"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.49.0", features = ["rt", "macros", "io-util"] }
log = "0.4.28"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.91", features = [
    "Clipboard",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Navigator",
    "Window",
] }
