[package]
name = "par-builtin"
version = "0.1.0"
edition = "2024"

[dependencies]
par-core = { path = "../par-core" }
par-runtime = { path = "../par-runtime" }

arcstr = "1.2.0"
bytes = "1.6.1"
futures = { version = "0.3.31", features = ["executor", "thread-pool"] }
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = { version = "1.7.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.6", features = ["tokio"] }
im = "15"
indexmap = "2.7.0"
jiff = { version = "0.2", features = ["tzdb-bundle-always"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
num-integer = "0.1.46"
percent-encoding = "2.3.1"
reqwest = { version = "0.12.8", features = ["stream", "gzip", "brotli", "deflate"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio-util = "0.7.15"
tracing = "0.1.41"
url = "2.5.4"
inventory = "0.3.22"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "fs", "io-util", "io-std", "signal", "time"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "any", "sqlite", "postgres", "mysql"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.49.0", features = ["rt", "macros", "io-util"] }
